tests/fixtures/LatestTests/ObjectTests/errors/assign_to_const.fg
/; EXPECT_ERROR: InvalidAssignmentToConstantVariable
type Person = {
    name: str
    age: int
}

const p: Person = {
    name: "John",
    age: 30
}

p = {
    name: "Jane",
    age: 25
}

